# PartsGenie

./: .gitignore  Dockerfile  cleanup-policy.json  cloudbuild.yaml  deploy.sh  environment.yaml  main.py  manager.py  organisms.py  pyproject.toml  requirements.txt  thread_utils.py  vienna_rna_configure.txt
.github/workflows/: python-package.yml
ice/: ice.py
parts_genie/: i2_utils.py  parts.py  sbol_utils.py
partsgenie/: client.py  nucl_acid_utils.py  parts.py  rbs_calculator.py  vienna_utils.py
partsgenie/optim/: __init__.py  sim_ann.py
partsgenie/test/: __init__.py  _test_parts.py  _test_rbs_calculator_vienna.py  complex_query.json  multiple_query.json  promoter_query.json  simple_query.json  test_client.py  test_parts.py  test_rbs_calculator_vienna.py
partsgenie/utils/: codon_utils.py  dna_utils.py  job_utils.py  ncbi_tax_utils.py  seq_utils.py  uniprot_utils.py
partsgenie/utils/codon_usage_tables/: 9606.txt
partsgenie/utils/test/: restrict.json  sbol.json  test_codon_utils.py  test_dna_utils.py  test_ncbi_tax_utils.py  test_seq_utils.py  test_uniprot_utils.py
plasmid_genie/: plasmid.py
static/: index.html
static/design/: design.css
static/help/: help.html
static/partsGenie/: partsGenie.ctrl.js  partsGenie.service.js
static/pathwayGenie/: pathwayGenie.ctrl.js  pathwayGenie.module.js
static/progress/: progress.html
static/result/: result.ctrl.js  result.service.js
static/uniprot/: uniprot.html  uniprot.service.js
test/: test_organisms.py
