[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PartsGenie"
version = "1.0.2"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "biopython",
    "cython",
    "gunicorn",
    "Flask",
    "pandas",
    "pytest",
    "requests",
    "viennarna"
]

[tool.setuptools.packages.find]
include = ["partsgenie*"]